<resources>
    <string name="app_name">VirusGame</string>
    <string name="TextView">TextView</string>
    <string name="Login">Login</string>
    <string name="CreateAccount">Create Account</string>
    <string name="MaskCheck">Before we go outside, we\'d like to remind you to wear a mask. Are you wearing your mask?</string>
    <string name="new_account">new_account</string>
    <string name="enter_username">enter_username</string>
    <string name="enter_password">enter_password</string>
    <string name="confirm_password">confirm_password</string>
    <string name="resources">resources</string>
    <string name="clear">clear</string>
    <string name="create">create</string>
    <string name="enter">enter</string>
    <string name="exit">exit</string>
    <string name="Post_to_Facebook">Share results with Facebook</string>
    <string name="go_home">Return to Home</string>
    <string name="get_started">Let\'s get started!</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="change_password">change password</string>
    <string name="confirm_new_password">confirm</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="delete_account">delete account</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="search_virus">Find Virus Nearby</string>
    <string name="gameTextView">Your game starts here !</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_game">Start Game</string>
    <string name="virus">virus</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="sound_effects_on">Turn sound effects on</string>
    <string name="location_permission">Location Access</string>
    <string name="location_preferences_header">Location Preferences</string>
    <string name="sound_preferences_header">Sound Preferences</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="location_summary_on">Allow the game to access your location to find nearby virus characters.
    </string>
    <string name="location_summary_off">Do not allow the game to access your location to find nearby virus characters</string>


</resources>