<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/change_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <EditText
        android:id="@+id/username"
        android:hint="@string/enter_username"
        android:inputType="textPassword"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1" />

    <EditText
        android:id="@+id/old_password"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1" />


    <EditText
        android:id="@+id/new_password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/new_password"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1" />
    <EditText
        android:id="@+id/confirm_new_password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/confirm_new_password"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/enter" />


</LinearLayout>
